@@ -1,0 +1,570 @@
+%!PS-Adobe-3.0
+%%BoundingBox: 0 0 612 792
+%%HiResBoundingBox: 0 0 612 792
+%%Title: GMT v4.3.2 (CVS Dec 16 2008 10:35:02) Document from psxy
+%%Creator: GMT
+%%For: pwessel
+%%DocumentNeededResources: font Helvetica
+%%CreationDate: Wed Dec 17 08:41:41 2008
+%%LanguageLevel: 1
+%%DocumentData: Clean7Bit
+%%Orientation: Portrait
+%%Pages: 1
+%%EndComments
+
+%%BeginProlog
+250 dict begin
+/! {bind def} bind def
+/# {load def}!
+/A /setgray #
+/B /setdash #
+/C /setrgbcolor #
+/D /rlineto #
+/E {dup stringwidth pop}!
+/F /fill #
+/G /rmoveto #
+/H /sethsbcolor #
+/I /setpattern #
+/K /setcmykcolor #
+/L /lineto #
+/M {stroke moveto}!
+/m {moveto}!
+/N /newpath #
+/P /closepath #
+/R /rotate #
+/S /stroke #
+/T /translate #
+/U /grestore #
+/V /gsave #
+/W /setlinewidth #
+/Y {findfont exch scalefont setfont}!
+/Z /show #
+/FP {true charpath flattenpath}!
+/YP {FP pathbbox N exch pop sub abs exch pop}!
+/O {M W 0 0 D S}!
+/X {M dup 0 D dup 2 div neg dup G 0 exch D S}!
+/QA {P V A F U N}! /QC {P V C F U N}! /QK {P V K F U N}! /QH {P V H F U N}! /QI {P V I F U N}! /QQ {P S}!
+/Qa {P V A F U S}! /Qc {P V C F U S}! /Qk {P V K F U S}! /Qh {P V H F U S}! /Qi {P V I F U S}!
+/q0 {M {D} repeat}!
+/qA {q0 QA}! /qC {q0 QC}! /qK {q0 QK}! /qH {q0 QH}! /qI {q0 QI}! /qQ {q0 QQ}!
+/qa {q0 Qa}! /qc {q0 Qc}! /qk {q0 Qk}! /qh {q0 Qh}! /qi {q0 Qi}!
+/V0 {0 exch M 0 D D D D D 0 D}!
+/VA {V0 QA}! /VC {V0 QC}! /VK {V0 QK}! /VH {V0 QH}! /VI {V0 QI}! /VQ {V0 QQ}!
+/Va {V0 Qa}! /Vc {V0 Qc}! /Vk {V0 Qk}! /Vh {V0 Qh}! /Vi {V0 Qi}!
+/v0 {0 0 M D D 0 D D D D D 0 D D}!
+/vA {v0 QA}! /vC {v0 QC}! /vK {v0 QK}! /vH {v0 QH}! /vI {v0 QI}! /vQ {v0 QQ}!
+/va {v0 Qa}! /vc {v0 Qc}! /vk {v0 Qk}! /vh {v0 Qh}! /vi {v0 Qi}!
+/B0 {M dup 0 D exch 0 exch D neg 0 D}!
+/BA {B0 QA}! /BC {B0 QC}! /BK {B0 QK}! /BH {B0 QH}! /BI {B0 QI}! /BQ {B0 QQ}!
+/Ba {B0 Qa}! /Bc {B0 Qc}! /Bk {B0 Qk}! /Bh {B0 Qh}! /Bi {B0 Qi}!
+/C0 {S 0 360 arc}!
+/CA {C0 QA}! /CC {C0 QC}! /CK {C0 QK}! /CH {C0 QH}! /CI {C0 QI}! /CQ {C0 QQ}!
+/Ca {C0 Qa}! /Cc {C0 Qc}! /Ck {C0 Qk}! /Ch {C0 Qh}! /Ci {C0 Qi}!
+/D0 {M 4 {dup} repeat 0 G neg dup dup D exch D D}!
+/DA {D0 QA}! /DC {D0 QC}! /DK {D0 QK}! /DH {D0 QH}! /DI {D0 QI}! /DQ {D0 QQ}!
+/Da {D0 Qa}! /Dc {D0 Qc}! /Dk {D0 Qk}! /Dh {D0 Qh}! /Di {D0 Qi}!
+/R0 {M V R dup -2 div 0 G exch dup -2 div 0 exch G exch dup 0 D exch 0 exch D neg 0 D}!
+/RA {R0 QA U}! /RC {R0 QC U}! /RK {R0 QK U}! /RH {R0 QH U}! /RI {R0 QI U}! /RQ {R0 QQ U}!
+/Ra {R0 Qa U}! /Rc {R0 Qc U}! /Rk {R0 Qk U}! /Rh {R0 Qh U}! /Ri {R0 Qi U}!
+/S0 {M 1.414213562 mul dup dup dup -2 div dup G 0 D 0 exch D neg 0 D}!
+/SA {S0 QA}! /SC {S0 QC}! /SK {S0 QK}! /SH {S0 QH}! /SI {S0 QI}! /SQ {S0 QQ}!
+/Sa {S0 Qa}! /Sc {S0 Qc}! /Sk {S0 Qk}! /Sh {S0 Qh}! /Si {S0 Qi}!
+/T0 {M V dup 0 exch G -60 R 1.732050808 mul dup 0 D -120 R 0 D}!
+/TA {T0 QA U}! /TC {T0 QC U}! /TK {T0 QK U}! /TH {T0 QH U}! /TI {T0 QI U}! /TQ {T0 QQ U}!
+/Ta {T0 Qa U}! /Tc {T0 Qc U}! /Tk {T0 Qk U}! /Th {T0 Qh U}! /Ti {T0 Qi U}!
+/I0 {M V dup neg 0 exch G 60 R 1.732050808 mul dup 0 D 120 R 0 D}!
+/IA {I0 QA U}! /IC {I0 QC U}! /IK {I0 QK U}! /IH {I0 QH U}! /II {I0 QI U}! /IQ {I0 QQ U}!
+/Ia {I0 Qa U}! /Ic {I0 Qc U}! /Ik {I0 Qk U}! /Ih {I0 Qh U}! /Ii {I0 Qi U}!
+/A0 {M V dup 0 exch G 0.726542528 mul -72 R dup 0 D 4 {72 R dup 0 D -144 R dup 0 D} repeat pop}!
+/AA {A0 QA U}! /AC {A0 QC U}! /AK {A0 QK U}! /AH {A0 QH U}! /AI {A0 QI U}! /AQ {A0 QQ U}!
+/Aa {A0 Qa U}! /Ac {A0 Qc U}! /Ak {A0 Qk U}! /Ah {A0 Qh U}! /Ai {A0 Qi U}!
+/H0 {M V dup 0 G -120 R dup 0 D 4 {-60 R dup 0 D} repeat pop}!
+/HA {H0 QA U}! /HC {H0 QC U}! /HK {H0 QK U}! /HH {H0 QH U}! /HI {H0 QI U}! /HQ {H0 QQ U}!
+/Ha {H0 Qa U}! /Hc {H0 Qc U}! /Hk {H0 Qk U}! /Hh {H0 Qh U}! /Hi {H0 Qi U}!
+/N0 {M V dup 0 exch G -36 R 1.175570505 mul dup 0 D 3 {-72 R dup 0 D} repeat pop}!
+/NA {N0 QA U}! /NC {N0 QC U}! /NK {N0 QK U}! /NH {N0 QH U}! /NI {N0 QI U}! /NQ {N0 QQ U}!
+/Na {N0 Qa U}! /Nc {N0 Qc U}! /Nk {N0 Qk U}! /Nh {N0 Qh U}! /Ni {N0 Qi U}!
+/O0 {M V 22.5 R dup 0 exch G -22.5 R 0.765366865 mul dup 0 D 6 {-45 R dup 0 D} repeat pop}!
+/OA {O0 QA U}! /OC {O0 QC U}! /OK {O0 QK U}! /OH {O0 QH U}! /OI {O0 QI U}! /OQ {O0 QQ U}!
+/Oa {O0 Qa U}! /Oc {O0 Qc U}! /Ok {O0 Qk U}! /Oh {O0 Qh U}! /Oi {O0 Qi U}!
+/WA {arc QA}! /WC {arc QC}! /WK {arc QK}! /WH {arc QH}! /WI {arc QI}! /WQ {arc QQ}!
+/Wa {arc Qa}! /Wc {arc Qc}! /Wk {arc Qk}! /Wh {arc Qh}! /Wi {arc Qi}!
+/PSL_reencode { findfont dup length dict begin
+  {1 index /FID ne {def}{pop pop} ifelse} forall
+  exch /Encoding exch def currentdict end definefont pop
+}!
+/Standard+_Encoding [
+/.notdef	/.notdef	/.notdef	/.notdef	/.notdef	/.notdef	/.notdef	/.notdef
+/.notdef	/.notdef	/.notdef	/.notdef	/.notdef	/.notdef	/.notdef	/.notdef
+/.notdef	/.notdef	/.notdef	/.notdef	/.notdef	/.notdef	/.notdef	/.notdef
+/.notdef	/threequarters	/threesuperior	/trademark	/twosuperior	/yacute		/ydieresis	/zcaron
+/space		/exclam		/quotedbl	/numbersign	/dollar		/percent	/ampersand	/quoteright
+/parenleft	/parenright	/asterisk	/plus		/comma		/hyphen		/period		/slash
+/zero		/one		/two		/three		/four		/five		/six		/seven
+/eight		/nine		/colon		/semicolon	/less		/equal		/greater	/question
+/at		/A		/B		/C		/D		/E		/F		/G
+/H		/I		/J		/K		/L		/M		/N		/O
+/P		/Q		/R		/S		/T		/U		/V		/W
+/X		/Y		/Z		/bracketleft	/backslash	/bracketright	/asciicircum	/underscore
+/quoteleft	/a		/b		/c		/d		/e		/f		/g
+/h		/i		/j		/k		/l		/m		/n		/o
+/p		/q		/r		/s		/t		/u		/v		/w
+/x		/y		/z		/braceleft	/bar		/braceright	/asciitilde	/florin
+/Atilde		/Ccedilla	/Eth		/Lslash		/Ntilde		/Otilde		/Scaron		/Thorn
+/Yacute		/Ydieresis	/Zcaron		/atilde		/brokenbar	/ccedilla	/copyright	/degree
+/divide		/eth		/logicalnot	/lslash		/minus		/mu		/multiply	/ntilde
+/onehalf	/onequarter	/onesuperior	/otilde		/plusminus	/registered	/scaron		/thorn
+/.notdef	/exclamdown	/cent		/sterling	/fraction	/yen		/florin		/section
+/currency	/quotesingle	/quotedblleft	/guillemotleft	/guilsinglleft	/guilsinglright	/fi		/fl
+/Aacute		/endash		/dagger		/daggerdbl	/periodcentered	/Acircumflex	/paragraph	/bullet
+/quotesinglbase	/quotedblbase	/quotedblright	/guillemotright	/ellipsis	/perthousand	/Adieresis	/questiondown
+/Agrave		/grave		/acute		/circumflex	/tilde		/macron		/breve		/dotaccent
+/dieresis	/Eacute		/ring		/cedilla	/Ecircumflex	/hungarumlaut	/ogonek		/caron
+/emdash		/Edieresis	/Egrave		/Iacute		/Icircumflex	/Idieresis	/Igrave		/Oacute
+/Ocircumflex	/Odieresis	/Ograve		/Uacute		/Ucircumflex	/Udieresis	/Ugrave		/aacute
+/acircumflex	/AE		/adieresis	/ordfeminine	/agrave		/eacute		/ecircumflex	/edieresis
+/egrave		/Oslash		/OE		/ordmasculine	/iacute		/icircumflex	/idieresis	/igrave
+/oacute		/ae		/ocircumflex	/odieresis	/ograve		/dotlessi	/uacute		/ucircumflex
+/udieresis	/oslash		/oe		/germandbls	/ugrave		/Aring		/aring		/ydieresis
+] def
+/PSL_font_encode 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 39 array astore def
+/F0 {/Helvetica Y}!
+/F1 {/Helvetica-Bold Y}!
+/F2 {/Helvetica-Oblique Y}!
+/F3 {/Helvetica-BoldOblique Y}!
+/F4 {/Times-Roman Y}!
+/F5 {/Times-Bold Y}!
+/F6 {/Times-Italic Y}!
+/F7 {/Times-BoldItalic Y}!
+/F8 {/Courier Y}!
+/F9 {/Courier-Bold Y}!
+/F10 {/Courier-Oblique Y}!
+/F11 {/Courier-BoldOblique Y}!
+/F12 {/Symbol Y}!
+/F13 {/AvantGarde-Book Y}!
+/F14 {/AvantGarde-BookOblique Y}!
+/F15 {/AvantGarde-Demi Y}!
+/F16 {/AvantGarde-DemiOblique Y}!
+/F17 {/Bookman-Demi Y}!
+/F18 {/Bookman-DemiItalic Y}!
+/F19 {/Bookman-Light Y}!
+/F20 {/Bookman-LightItalic Y}!
+/F21 {/Helvetica-Narrow Y}!
+/F22 {/Helvetica-Narrow-Bold Y}!
+/F23 {/Helvetica-Narrow-Oblique Y}!
+/F24 {/Helvetica-Narrow-BoldOblique Y}!
+/F25 {/NewCenturySchlbk-Roman Y}!
+/F26 {/NewCenturySchlbk-Italic Y}!
+/F27 {/NewCenturySchlbk-Bold Y}!
+/F28 {/NewCenturySchlbk-BoldItalic Y}!
+/F29 {/Palatino-Roman Y}!
+/F30 {/Palatino-Italic Y}!
+/F31 {/Palatino-Bold Y}!
+/F32 {/Palatino-BoldItalic Y}!
+/F33 {/ZapfChancery-MediumItalic Y}!
+/F34 {/ZapfDingbats Y}!
+/F35 {/Ryumin-Light-EUC-H Y}!
+/F36 {/Ryumin-Light-EUC-V Y}!
+/F37 {/GothicBBB-Medium-EUC-H Y}!
+/F38 {/GothicBBB-Medium-EUC-V Y}!
+/PSL_pathtextdict 26 dict def
+/PSL_pathtext
+  { PSL_pathtextdict begin
+    /textheight exch def
+    /just exch def
+    /offset exch def
+    /str exch def
+    /pathdist 0 def
+    /setdist offset def
+    /charcount 0 def
+    /justy just 4 idiv textheight mul 2 div neg def
+    V flattenpath
+	{movetoproc} {linetoproc}
+	{curvetoproc} {closepathproc}
+	pathforall
+    U N
+    end
+  } def
+PSL_pathtextdict begin
+/movetoproc
+  { /newy exch def /newx exch def
+    /firstx newx def /firsty newy def
+    /ovr 0 def
+    newx newy transform
+    /cpy exch def /cpx exch def
+  } def
+/linetoproc
+  { /oldx newx def /oldy newy def
+    /newy exch def /newx exch def
+    /dx newx oldx sub def
+    /dy newy oldy sub def
+    /dist dx dup mul dy dup mul add sqrt def
+    dist 0 ne
+    { /dsx dx dist div ovr mul def
+      /dsy dy dist div ovr mul def
+      oldx dsx add oldy dsy add transform
+      /cpy exch def /cpx exch def
+      /pathdist pathdist dist add def
+      { setdist pathdist le
+	  { charcount str length lt
+	      {setchar} {exit} ifelse }
+	  { /ovr setdist pathdist sub def
+	    exit }
+	  ifelse
+      } loop
+    } if
+  } def
+/curvetoproc
+  { (ERROR: No curveto's after flattenpath!)
+    print
+  } def
+/closepathproc
+  { firstx firsty linetoproc
+    firstx firsty movetoproc
+  } def
+/setchar
+  { /char str charcount 1 getinterval def
+    /charcount charcount 1 add def
+    /charwidth char stringwidth pop def
+    V cpx cpy itransform T
+      dy dx atan R
+      0 justy m
+      char show
+      0 justy neg G
+      currentpoint transform
+      /cpy exch def /cpx exch def
+    U /setdist setdist charwidth add def
+  } def
+end
+/PSL_curved_text_labels
+{ /bits exch def
+  /PSL_clippath bits 1 and 1 eq def
+  /PSL_placetext bits 2 and 0 eq def
+  /PSL_strokeline bits 4 and 4 eq def
+  /PSL_firstcall bits 32 and 32 eq def
+  /PSL_lastcall bits 64 and 64 eq def
+  /PSL_fillbox bits 128 and 128 eq def
+  /PSL_drawbox bits 256 and 256 eq def
+  /PSL_n1 PSL_n 1 sub def
+  /PSL_m1 PSL_m 1 sub def
+  /PSL_usebox PSL_fillbox PSL_drawbox or def
+  PSL_CT_calcstringwidth
+  PSL_CT_calclinedist
+  PSL_CT_addcutpoints
+  PSL_clippath PSL_firstcall and
+  { V N clippath } if
+  PSL_setlinepen
+  /PSL_nn1 PSL_nn 1 sub def
+  /n 0 def
+  /k 0 def
+  /j 0 def
+  /PSL_seg 0 def
+  /PSL_xp PSL_nn array def
+  /PSL_yp PSL_nn array def
+  PSL_xp 0 PSL_xx 0 get put
+  PSL_yp 0 PSL_yy 0 get put
+  1 1 PSL_nn1
+  { /i exch def
+    /node_type PSL_kind i get def
+    /j j 1 add def
+    PSL_xp j PSL_xx i get put
+    PSL_yp j PSL_yy i get put
+    node_type 1 eq
+    { n 0 eq
+      { PSL_CT_drawline }
+      {	PSL_CT_reversepath
+	PSL_CT_textline } ifelse
+      /j 0 def
+      PSL_xp j PSL_xx i get put
+      PSL_yp j PSL_yy i get put
+    } if
+  } for
+  n 0 eq {PSL_CT_drawline} if
+  PSL_lastcall
+  { PSL_clippath
+    { clip /PSL_clip_on true def } if N
+  } if
+} def
+/PSL_CT_textline
+{ PSL_placetext
+  { PSL_clippath
+    { PSL_CT_clippath }
+    { PSL_CT_placelabel } ifelse
+  } if
+  /n 0 def /k k 1 add def PSL_setlinepen
+} def
+/PSL_CT_calcstringwidth
+{ /PSL_width PSL_m array def
+  0 1 PSL_m1
+  { /i exch def
+    PSL_width i PSL_str i get stringwidth pop put
+  } for
+} def
+/PSL_CT_calclinedist
+{ /PSL_newx PSL_x 0 get def
+  /PSL_newy PSL_y 0 get def
+  /dist 0.0 def
+  /PSL_dist PSL_n array def
+  PSL_dist 0 0.0 put
+  1 1 PSL_n1
+  { /i exch def
+    /PSL_oldx PSL_newx def
+    /PSL_oldy PSL_newy def
+    /PSL_newx PSL_x i get def
+    /PSL_newy PSL_y i get def
+    /dx PSL_newx PSL_oldx sub def
+    /dy PSL_newy PSL_oldy sub def
+    /dist dist dx dx mul dy dy mul add sqrt add def
+    PSL_dist i dist put
+  } for
+} def
+/PSL_CT_addcutpoints
+{ /k 0 def
+  /PSL_nc PSL_m 2 mul 1 add def
+  /PSL_cuts PSL_nc array def
+  /PSL_nc1 PSL_nc 1 sub def
+  0 1 PSL_m1
+  { /i exch def
+    /dist PSL_dist PSL_node i get get def
+    /halfwidth PSL_width i get 2 div PSL_gap_x add def
+    PSL_cuts k dist halfwidth sub put
+    /k k 1 add def
+    PSL_cuts k dist halfwidth add put
+    /k k 1 add def
+  } for
+  PSL_cuts k 100000.0 put
+  /PSL_nn PSL_n PSL_m 2 mul add def
+  /PSL_xx PSL_nn array def
+  /PSL_yy PSL_nn array def
+  /PSL_kind PSL_nn array def
+  /j 0 def
+  /k 0 def
+  /dist 0.0 def
+  0 1 PSL_n1
+  { /i exch def
+    /last_dist dist def
+    /dist PSL_dist i get def
+    k 1 PSL_nc1
+    { /kk exch def
+      /this_cut PSL_cuts kk get def
+      dist this_cut gt
+      { /ds dist last_dist sub def
+	/f ds 0.0 eq {0.0} {dist this_cut sub ds div} ifelse def
+	/i1 i 0 eq { 0 } { i 1 sub } ifelse def
+	PSL_xx j PSL_x i get dup PSL_x i1 get sub f mul sub put
+	PSL_yy j PSL_y i get dup PSL_y i1 get sub f mul sub put
+	PSL_kind j 1 put
+	/j j 1 add def
+	/k k 1 add def
+      } if
+    } for
+    dist PSL_cuts k get le
+    { PSL_xx j PSL_x i get put PSL_yy j PSL_y i get put
+      PSL_kind j 0 put
+      /j j 1 add def
+    } if
+  } for
+} def
+/PSL_CT_reversepath
+{ PSL_xp j get PSL_xp 0 get lt
+  { 0 1 j 2 idiv
+    { /left exch def
+      /right j left sub def
+      /tmp PSL_xp left get def
+      PSL_xp left PSL_xp right get put
+      PSL_xp right tmp put
+      /tmp PSL_yp left get def
+      PSL_yp left PSL_yp right get put
+      PSL_yp right tmp put
+    } for
+  } if
+} def
+/PSL_CT_placelabel
+{
+  PSL_usebox
+  { PSL_CT_clippath
+    PSL_fillbox
+    { V PSL_setboxrgb fill U } if
+    PSL_drawbox
+    { PSL_setboxpen S } if N
+  } if
+  PSL_settxtrgb PSL_CT_placeline PSL_str k get PSL_gap_x PSL_just PSL_height PSL_pathtext
+} def
+/PSL_CT_clippath
+{
+  /H PSL_height 2 div PSL_gap_y add def
+  /xoff j 1 add array def
+  /yoff j 1 add array def
+  /angle 0 def
+  0 1 j {
+    /ii exch def
+    /x PSL_xp ii get def
+    /y PSL_yp ii get def
+    ii 0 eq {
+      /x1 PSL_xp 1 get def
+      /y1 PSL_yp 1 get def
+      /dx x1 x sub def
+      /dy y1 y sub def
+    }
+    { /i1 ii 1 sub def
+      /x1 PSL_xp i1 get def
+      /y1 PSL_yp i1 get def
+      /dx x x1 sub def
+      /dy y y1 sub def
+    } ifelse
+    dx 0.0 ne dy 0.0 ne and
+    { /angle dy dx atan 90 add def } if
+    /sina angle sin def
+    /cosa angle cos def
+    xoff ii H cosa mul put
+    yoff ii H sina mul put
+  } for
+  PSL_xp 0 get xoff 0 get add PSL_yp 0 get yoff 0 get add m
+  1 1 j {
+    /ii exch def
+    PSL_xp ii get xoff ii get add PSL_yp ii get yoff ii get add L
+  } for
+  j -1 0 {
+    /ii exch def
+    PSL_xp ii get xoff ii get sub PSL_yp ii get yoff ii get sub L
+  } for P
+} def
+/PSL_CT_drawline
+{
+  /str 20 string def
+  PSL_strokeline
+  { PSL_CT_placeline PSL_setlinepen S } if
+  /PSL_seg PSL_seg 1 add def
+  /n 1 def
+} def
+/PSL_CT_placeline
+{ PSL_xp 0 get PSL_yp 0 get m
+  1 1 j { /ii exch def PSL_xp ii get PSL_yp ii get L} for
+} def
+/PSL_straight_text_labels
+{
+  /bits exch def
+  /PSL_clippath bits 1 and 0 eq def
+  /PSL_rounded bits 16 and 16 eq def
+  /PSL_fillbox bits 128 and 128 eq def
+  /PSL_drawbox bits 256 and 256 eq def
+  /PSL_m1 PSL_m 1 sub def
+  /PSL_justx PSL_just 4 mod 1 sub 2 div neg def
+  /PSL_justy PSL_just 4 idiv PSL_height mul 2 div neg def
+  /PSL_usebox PSL_fillbox PSL_drawbox or def
+  PSL_clippath
+  { PSL_ST_clippath }
+  { PSL_usebox { PSL_ST_clippath } if
+    PSL_ST_placelabel
+  } ifelse
+} def
+/PSL_ST_placelabel
+{ PSL_settxtrgb
+  0 1 PSL_m1
+  { /k exch def
+    /xp PSL_txt_x k get def
+    /yp PSL_txt_y k get def
+    V PSL_txt_x k get PSL_txt_y k get T
+    PSL_angle k get R
+    /BoxW PSL_str k get stringwidth pop def
+    BoxW PSL_justx mul PSL_justy m
+    PSL_str k get show
+    U
+  } for
+} def
+/PSL_ST_clippath
+{ PSL_rounded { PSL_ST_clippath_round } { PSL_ST_clippath_rect } ifelse
+  PSL_usebox
+  { PSL_fillbox
+    { V PSL_setboxrgb fill U } if
+    PSL_drawbox
+    { PSL_setboxpen S } if N
+  }
+  { clip /PSL_clip_on true def
+  } ifelse
+  N
+} def
+/PSL_ST_clippath_rect
+{ N
+  /BoxH PSL_height PSL_gap_y 2 mul add def
+  /DelY BoxH BoxH 0 3 array astore def
+  PSL_usebox not { V clippath } if
+  0 1 PSL_m1
+  { /k exch def
+    /xp PSL_txt_x k get def
+    /yp PSL_txt_y k get def
+    /MAT PSL_angle k get matrix R def
+    /BoxW PSL_str k get stringwidth pop PSL_gap_x 2 mul add def
+    /x0 0 BoxW PSL_justx mul add def
+    /y0 0 PSL_justy add PSL_gap_y sub def
+    /DelX 0 BoxW BoxW 3 array astore def
+    x0 y0 MAT transform
+    /dy exch def /dx exch def
+    xp dx add yp dy add m
+    0 1 2
+    {
+      /ii exch def
+      x0 DelX ii get add y0 DelY ii get add MAT transform
+      /dy exch def /dx exch def
+      xp dx add yp dy add L
+    } for P
+  } for
+} def
+/PSL_ST_clippath_round
+{ N
+  /PSL_justy2 PSL_just 4 idiv 2 div neg def
+  /PSL_r PSL_gap_x PSL_gap_y lt { PSL_gap_x } { PSL_gap_y } ifelse def
+  /PSL_dx PSL_gap_x PSL_r sub def
+  /PSL_dy PSL_gap_y PSL_r sub def
+  /PSL_r2 PSL_r 2 mul def
+  /BoxH PSL_height PSL_dy 2 mul add def
+  /y0 PSL_height PSL_gap_y 2 mul add PSL_justy2 mul def
+  PSL_usebox not { V clippath } if
+  0 1 PSL_m1
+  { /k exch def
+    /xp PSL_txt_x k get def
+    /yp PSL_txt_y k get def
+    /PSL_width PSL_str k get stringwidth pop def
+    /BoxW PSL_width PSL_dx 2 mul add def
+    /x0 BoxW PSL_justx mul def
+    xp yp T PSL_angle k get R x0 y0 T
+    0 0 m
+    BoxW PSL_r add 0 BoxW PSL_r add PSL_r PSL_r arct
+    BoxW PSL_r add BoxH PSL_r2 add BoxW BoxH PSL_r2 add PSL_r arct
+    PSL_r neg BoxH PSL_r2 add PSL_r neg BoxH PSL_r add PSL_r arct
+    PSL_r neg 0 0 0 PSL_r arct P
+    x0 neg y0 neg T PSL_angle k get neg R xp neg yp neg T
+  } for
+} def
+/PSL_clip_on false def
+%%EndProlog
+
+%%BeginSetup
+/PSLevel /languagelevel where {pop languagelevel} {1} ifelse def
+PSLevel 1 gt { << /PageSize [612 792] /ImagingBBox null >> setpagedevice } if
+%%EndSetup
+
+%%Page: 1 1
+
+%%BeginPageSetup
+0.24 0.24 scale
+%%EndPageSetup
+
+PSL_font_encode 0 get 0 eq {Standard+_Encoding /Helvetica /Helvetica PSL_reencode PSL_font_encode 0 1 put} if
+0 setlinecap
+0 setlinejoin
+10 setmiterlimit
+300 300 T
+
+%% PostScript produced by:
+%%GMT:  psxy -JX6 -R0/6/0/6 -P /dev/null
+S 1 W
+S 0 A
+%%PageTrailer
+S -300 -300 T 4.16667 4.16667 scale 0 A
+showpage
+
+%%Trailer
+
+end
+%%EOF
